added missing comma.

--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
         "flask",
         "python",
         "web",
-        "voice"
+        "voice",
         "TwiML"
     ],
     "website": "http://www.twilio.com",
